<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="no_svs">NO SVS</string>
    <string name="svs">SVS</string>
    <string name="cash">Cash</string>
    <string name="no_gst">NO GST</string>
    <string name="gst">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="total_bill">Total Bill: $</string>
    <string name="each_pays">Each pays: $</string>
    <string name="paynow">PayNow</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>

</resources>